Chore: Add logging and enhanced size estimation methods to improve EHCache compatibility